fixing owl carousel overflow bug

--- a/css/common.css
+++ b/css/common.css
@@ -36,9 +36,9 @@ html {
 /* General styles for body elements */
 
 body {
+    /* Remove min-width:fit-content-property; to eliminate overflow problem */
     margin: 0px;
     padding: 0px;
-    min-width: fit-content;
     height: 100%;
     overflow-x: hidden;
     -webkit-touch-callout: none;
