--- a/css/home.responsive.css
+++ b/css/home.responsive.css
@@ -14,7 +14,6 @@
         height: auto !important;
     }
     .offer-card {
-        width: 100% !important;
         height: 380px !important;
         max-height: 380px !important;
     }
@@ -243,7 +242,6 @@
         height: 300px;
     }
     .offer-card {
-        width: 97% !important;
         height: 345px !important;
         max-height: 360px !important;
     }
